finally fixed the modal loading behind the page

--- a/react-app/public/mainbody.css
+++ b/react-app/public/mainbody.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-html,
 body {
   height: 100vh;
+  position: relative;
   /* cursor: none; */
 }
 /*
