--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -1,4 +1,5 @@
 #modal {
+  z-index: 100000;
   position: fixed;
   top: 0;
   right: 0;
